lista vista bienvenida solo detalle del logo

--- a/client/app.json
+++ b/client/app.json
@@ -22,6 +22,12 @@
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "plugins": [
+      "expo-font"
+    ],
+    "assetBundlePatterns": [
+      "assets/fonts/*"
+    ]
   }
 }
