--- a/client/package.json
+++ b/client/package.json
@@ -24,7 +24,8 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^3.9.1",
-    "react-native-web": "~0.19.10"
+    "react-native-web": "~0.19.10",
+    "expo-font": "~12.0.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
