--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~3.2.1",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
     "expo": "~51.0.2",
+    "expo-font": "~12.0.5",
     "expo-module-scripts": "^3.5.1",
     "expo-status-bar": "~1.12.1",
     "react": "18.2.0",
@@ -24,11 +26,8 @@
     "react-native-reanimated-carousel": "^3.5.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "@expo/metro-runtime": "~3.2.1",
-    "react-native-snap-carousel": "^3.9.1",
-    "react-native-web": "~0.19.10",
-    "expo-font": "~12.0.5"
-
+    "react-native-snap-carousel": "^1.3.1",
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
