--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "axios": "^1.7.2",
     "expo": "~51.0.2",
     "expo-font": "~12.0.5",
     "expo-module-scripts": "^3.5.1",
