vistas:dates,notas,contraseña listas.en el perfil falta el avatar

--- a/client/app.json
+++ b/client/app.json
@@ -24,7 +24,8 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      "expo-asset"
     ],
     "assetBundlePatterns": [
       "assets/fonts/*"
