--- a/client/package.json
+++ b/client/package.json
@@ -31,7 +31,10 @@
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-snap-carousel": "^1.3.1",
-    "react-native-web": "~0.19.10"
+    "react-native-svg": "^15.3.0",
+    "react-native-svg-transformer": "^1.4.0",
+    "react-native-web": "~0.19.10",
+    "expo-asset": "~10.0.9"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
