--- a/client/package.json
+++ b/client/package.json
@@ -17,8 +17,10 @@
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
+    "@reduxjs/toolkit": "^2.2.5",
     "axios": "^1.7.2",
     "expo": "~51.0.2",
+    "expo-asset": "~10.0.9",
     "expo-font": "~12.0.5",
     "expo-module-scripts": "^3.5.1",
     "expo-status-bar": "~1.12.1",
@@ -36,7 +38,7 @@
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-web": "~0.19.10",
-    "expo-asset": "~10.0.9"
+    "react-redux": "^9.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
