redux de tipFive y tipSix listos

--- a/client/app.json
+++ b/client/app.json
@@ -20,6 +20,11 @@
         "backgroundColor": "#ffffff"
       }
     },
+
+    "permissions": [
+        "INTERNET"
+      ],
+      
     "web": {
       "favicon": "./assets/favicon.png"
     },
