--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "git": "node ../commit-push.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon -L"
+    "start": "node index.js",        
+    "start:dev": "nodemon -L"      
   },
   "author": "",
   "license": "ISC",
