--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "axios": "^1.7.2",
     "expo": "~51.0.2",
     "expo-asset": "~10.0.9",
+    "expo-av": "~14.0.7",
     "expo-font": "~12.0.5",
     "expo-module-scripts": "^3.5.1",
     "expo-status-bar": "~1.12.1",
@@ -38,6 +39,7 @@
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
     "react-native-web": "~0.19.10",
+    "react-native-youtube-iframe": "^2.3.0",
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
