--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-paper": "^5.12.3",
@@ -40,6 +41,7 @@
     "react-native-snap-carousel": "^1.3.1",
     "react-native-svg": "^15.3.0",
     "react-native-svg-transformer": "^1.4.0",
+    "react-native-vector-icons": "^10.2.0",
     "react-native-web": "~0.19.10",
     "react-native-youtube-iframe": "^2.3.0",
     "react-redux": "^9.1.2",
